Archive2/cf/3706e11573c7cb/output
main.cpp: In function 'int main()':
main.cpp:12:10: error: use of deleted function 'Test::Test()'
     Test t;
          ^
main.cpp:5:8: note: 'Test::Test()' is implicitly deleted because the default definition would be ill-formed:
 struct Test
        ^
main.cpp:7:25: error: union member 'Test::<anonymous union>::str_' with non-trivial 'std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::basic_string() [with _CharT = char; _Traits = std::char_traits<char>; _Alloc = std::allocator<char>]'
     union { std::string str_; };
                         ^
main.cpp:12:10: error: use of deleted function 'Test::~Test()'
     Test t;
          ^
main.cpp:5:8: note: 'Test::~Test()' is implicitly deleted because the default definition would be ill-formed:
 struct Test
        ^
main.cpp:7:25: error: union member 'Test::<anonymous union>::str_' with non-trivial 'std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::~basic_string() [with _CharT = char; _Traits = std::char_traits<char>; _Alloc = std::allocator<char>]'
     union { std::string str_; };
                         ^
